[tool.poetry]
name = "pydantic-partial"
version = "0.3.0"
description = "Create partial models from your pydantic models. Partial models may allow None for certain or all fields."
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"
repository = "https://github.com/team23/pydantic-partial"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = ">=1.9.0,<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-coverage = "^0.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-builtins = "^1.5.3"
flake8-annotations = "^2.9.1"
flake8-commas = "^2.1.0"
flake8-isort = "^4.2.0"
flake8-print = "^5.0.0"
flake8-debugger = "^4.1.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 115

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
