[tool.poetry]
name = "pydantic-partial"
version = "0.8.0"
description = "Create partial models from your pydantic models. Partial models may allow None for certain or all fields."
authors = ["TEAM23 GmbH <info@team23.de>"]
license = "MIT"
repository = "https://github.com/team23/pydantic-partial"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9.0.0"
pytest-cov = ">=3,<7"
tox = ">=3.26,<5.0"
ruff = ">=0.5.0,<0.12.0"
pyright = ">=1.1.350,<1.2"

[tool.ruff]
line-length = 115
target-version = "py39"
output-format = "grouped"

[tool.ruff.lint]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
ignore = ["A001","A002","A003","ANN401","C901","N8","B008","F405","F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
